@@ -1,5 +1,7 @@
 {{$NEXT}}
 
+    - Fix trigger conditions for pending warning
+
 0.000011  2016-03-18 08:12:05-07:00 America/Los_Angeles
 
     - Inherit listeners and filters (make TODO work)
